# budget-tracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app_spec.md  docker-compose.yml  initialprompt.md  pyproject.toml
.claude/: CLAUDE.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.streamlit/: config.toml
sample_data/: sample_aliases_mixed_v2.xlsx  sample_bank_statement_v2.csv  sample_correct.csv  sample_correct_v2.csv  sample_decrypted_transactions.json  sample_incompatible.csv  sample_needs_review.xlsx  sample_v3_correct.csv  sample_v3_mixed.xlsx  sample_v3_no_time.csv
src/budget_tracker/: app.py  config.py
src/budget_tracker/auth/: auth_service.py
src/budget_tracker/ingestion/: categories.py  parser.py  templates.py  validator.py
src/budget_tracker/storage/: crypto.py  paths.py  transaction_store.py
src/budget_tracker/ui/: add_transaction_page.py  admin_page.py  dashboard_page.py  expenses_page.py  income_page.py  login_page.py  settings_page.py  theme.py  transactions_page.py  upload_page.py
tests/: test_crypto.py  test_parser.py  test_paths.py  test_validator.py
