[project]
name = "budget-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35",
    "bcrypt>=4.1",
    "cryptography>=42.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "plotly>=5.22",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/budget_tracker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
